Removed dated js files, updated file tree

--- a/loader.html
+++ b/loader.html
@@ -17,8 +17,7 @@
     <div class="block">
         <p>
             <span class="loader">
-            <span class="left"><span class="anim"></span></span>
-            <span class="right"><span class="anim"></span></span>
+            <span class="left"><span class="anim"></span></span><span class="right"><span class="anim"></span></span>
             </span>
         </p>
     </div>
