--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
+  <meta name="descption" content="">
   <meta name="author" content="ItsOkayItsOfficial">
   <link rel="shortcut icon" href="assets/img/logo.png">
 
@@ -16,64 +16,190 @@
   <link href="assets/css/hover.css" rel="stylesheet">
 </head>
 
-<body data-spy="scroll" data-target="#site-nav" data-offset="120">
+<body>
 
   <!-- Sitnav -->
-  <nav id="site-nav" class="site-nav transition">
-    <a class="nav-link scroll" href="#about">
+  <nav id="site-nav" class="navbar">
+    <a class="nav-link" href="#about">
       <h1>About</h1>
     </a>
-    <a class="nav-link scroll" href="#skills">
+    <a class="nav-link" href="#skills">
       <h1>Aptitudes</h1>
     </a>
-    <a class="scroll" href="#home"><img src="assets/img/logo.png" class="logo"></a>
-    <a class="nav-link scroll" href="#portfolio">
+    <a class="nav-logo" href="#landing">
+      <svg class="nav-logo-bg" viewBox="0 0 250 250">
+        <circle id="loader" cx="125" cy="125" r="121" />
+        <polygon id="check" points="218.92 85.12 190.64 56.84 103.28 144.2 55.82 96.73 27.53 125.02 75.01 172.5 75.03 172.48 103.3 200.75 218.92 85.12"
+        />
+      </svg>
+    </a>
+    <a class="nav-link" href="#portfolio">
       <h1>Portfolio</h1>
     </a>
-    <a class="nav-link scroll" href="#contact">
+    <a class="nav-link" href="#contact">
       <h1>Contact</h1>
     </a>
   </nav>
   <!--/sitnav -->
 
 
+  <!-- Landing -->
+  <section id="landing">
+    <video autoplay name="media" loop>
+      <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
+        type="video/mp4">
+    </video>
+  </section>
+  <!-- /landing -->
+
+
   <!-- About -->
-  <div id="about" class="container">
-    <div class="row">
-      <div class="col-6">
-        <h1>TEST test Test TEST</h1>
+  <section id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <img class="portrait" src="assets/img/ajp2.jpg">
+        </div>
+        <!-- /.col-4 -->
+        <div class="col-8">
+          <h1>Developer & Student</h1>
+          <div class="col-6">
+            <p>Between growing up in Germany to hanging out in Montreal, studying in Kansas - then Beirut-, advocacy and designing
+              in D.C. & now finally banking and finance in AZ I've tried my hand at a little bit of everything. I've managed
+              to take part in the variety of human experiences & want to put that to work for you.</p>
+            <p>I taught myself programming playing around with internet based virtual worlds and picked up markup by taking
+              apart websites to see how they work. I haven't stopped learning since and am currently enrolled in the University
+              of Arizona's Full-stack Developer program.</p>
+          </div>
+          <!-- /.col-6 -->
+          <div class="col-6">
+            <p>From Javascript to Liquid to Ruby, designing and building for the web has become an all consuming passion. I'm
+              particularly good at building web presence through front-end design, connecting workflows with Node, Angular,
+              & React, and building RESTful API.</p>
+            <p>Need a web presence? I got you covered. Need solid back-to-front management and flow? I'm on it. </p>
+            <br>
+            <hr>
+          </div>
+          <!-- /.col-6 -->
+        </div>
+        <!-- /.col-8 -->
       </div>
+      <!-- /.row -->
     </div>
-  </div>
+    <!-- /.container -->
+  </section>
   <!-- /about -->
 
 
   <!-- Skills -->
-  <div id="skills" class="container">
-  </div>
+  <section id="skills">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-2">
+          <a id='fe' class="ops">
+            <h2>Front-end</h2>
+          </a>
+          <a id='be' class="ops">
+            <h2>Back-end</h2>
+          </a>
+          <a id='tl' class="ops">
+            <h2>Tools</h2>
+          </a>
+        </div>
+        <!-- /.col-2 -->
+
+        <div id="icons" class="col-8">
+          <span class="fe">
+            <a class="random">
+              <img class="icon" src="assets/img/icons/git1.svg">
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/git1.svg">
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/git1.svg">
+            </a>
+          </span>
+          <!-- /#fe -->
+          <span class="be">
+            <a class="random">
+              <img class="icon" src="assets/img/icons/git1.svg">
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/git1.svg">
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/git1.svg">
+            </a>
+          </span>
+          <!-- /#be -->
+          <span class="tl">
+            <a class="random">
+              <img class="icon" src="assets/img/icons/git1.svg">
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/git1.svg">
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/git1.svg">
+            </a>
+          </span>
+          <!-- /#tl -->
+        </div>
+        <!-- /.col-8 -->
+
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
   <!-- /skills -->
 
 
   <!-- Portfolio -->
-  <section id="portfolio">
-    <div class="container" style="background-color:aqua">
-      <div class=row>
-        <a>Test</a>
+  <section id="portfolio" style="background-color:#ccc">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-6">
+          <h1>Portfolio</h1>
+          <p>Section 3</p>
+        </div>
+        <!-- /.col-6 -->
+
       </div>
+      <!-- /.row -->
     </div>
+    <!-- /.container -->
   </section>
   <!-- /portfolio -->
 
 
   <!-- Contact -->
-  <div id="contact" class="container">
-  </div>
+  <footer id="contact">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-6">
+          <h1>Contact</h1>
+          <p>Section 4</p>
+        </div>
+        <!-- /.col-6 -->
+
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </footer>
   <!-- /contact -->
 
 
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
   <!-- Custom Js -->
   <script src="assets/js/custom.js"></script>
-  <script src="assets/js/classie.js"></script>
 
 </body>
 <!-- /body -->
