--- a/loader.html
+++ b/loader.html
@@ -9,6 +9,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/loader.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
@@ -17,10 +18,31 @@
     <div class="block">
         <p>
             <span class="loader">
-            <span class="left"><span class="anim"></span></span><span class="right"><span class="anim"></span></span>
+                <span class="left">
+                    <span class="anim"></span>
+                </span>
+                <span class="right">
+                    <span class="anim"></span>
+                </span>
             </span>
         </p>
     </div>
+
+    <h1>Length of circle is <span id="length"></span></h1>
+
+    <a class="nav-logo" href="#landing">
+        <svg class="logo" viewBox="0 0 250 250">
+            <circle class="a" cx="125" cy="125" r="121" />
+            <polygon class="b" points="218.92 85.12 190.64 56.84 103.28 144.2 55.82 96.73 27.53 125.02 75.01 172.5 75.03 172.48 103.3 200.75 218.92 85.12"
+            />
+
+        </svg>
+    </a>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+    <script src="./assets/js/loader.js"></script>
 
 </body>
 
