Finished #portfolio icons float animations and .show() toggles

--- a/index.html
+++ b/index.html
@@ -97,34 +97,34 @@
       <div class="row">
 
         <div class="col-2">
-          <a id='fe' class="ops">
+          <a class="ops" href="#fe">
             <h2>Front-end</h2>
           </a>
-          <a id='be' class="ops">
+          <a class="ops" href="#be">
             <h2>Back-end</h2>
           </a>
-          <a id='tl' class="ops">
+          <a class="ops" href="#tl">
             <h2>Tools</h2>
           </a>
         </div>
         <!-- /.col-2 -->
 
         <div id="icons" class="col-8">
-          <span class="fe">
+          <span id="fe">
             <a class="random">
-              <img class="icon" src="assets/img/icons/git1.svg">
+              <img class="icon" src='assets/img/icons/js1.svg'>
             </a>
             <a class="random">
-              <img class="icon" src="assets/img/icons/git1.svg">
+              <img class="icon" src="assets/img/icons/json1.svg">
             </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/git1.svg">
             </a>
           </span>
           <!-- /#fe -->
-          <span class="be">
+          <span id="be">
             <a class="random">
-              <img class="icon" src="assets/img/icons/git1.svg">
+              <img class="icon" src="assets/img/icons/node1.svg">
             </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/git1.svg">
@@ -134,15 +134,15 @@
             </a>
           </span>
           <!-- /#be -->
-          <span class="tl">
+          <span id="tl">
             <a class="random">
               <img class="icon" src="assets/img/icons/git1.svg">
             </a>
             <a class="random">
-              <img class="icon" src="assets/img/icons/git1.svg">
+              <img class="icon" src="assets/img/icons/github1.svg">
             </a>
             <a class="random">
-              <img class="icon" src="assets/img/icons/git1.svg">
+              <img class="icon" src="assets/img/icons/vscode1.svg">
             </a>
           </span>
           <!-- /#tl -->
