Finished .tooltips in CSS and jQuery

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
   <!-- Landing -->
   <section id="landing">
-    <video autoplay name="media" loop>
+    <!-- <video autoplay name="media" loop>
       <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
         type="video/mp4">
-    </video>
+    </video> -->
   </section>
   <!-- /landing -->
 
@@ -113,6 +113,9 @@
           <span id="fe">
             <a class="random">
               <img class="icon" src='assets/img/icons/js1.svg'>
+              <span class="tooltip">
+                <p>Test test TEST</p>
+              </span>
             </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/json1.svg">
