Proficiencies icons styling

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
           <a class="ops" href="#be">
             <h2>Back-end</h2>
           </a>
+          <a class="ops" href="#crm">
+            <h2>Crm / Cms</h2>
+          </a>
           <a class="ops" href="#dc">
             <h2>Data / Cloud</h2>
           </a>
           <a class="ops" href="#fe">
             <h2>Front-end</h2>
-          </a>
-          <a class="ops" href="#crm">
-            <h2>Crm / Cms</h2>
           </a>
           <a class="ops" href="#tl">
             <h2>Tools</h2>
@@ -170,9 +170,9 @@
           <!-- /#fe -->
           <span id="crm">
 
-            <a class="random">
+            <!-- <a class="random">
               <img class="icon" src="">
-            </a>
+            </a> -->
 
           </span>
           <!-- /#crm -->
