--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <!-- Landing -->
   <section id="landing">
     <video style="margin-top: -100px" autoplay name="media" loop>
-      <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
-        type="video/mp4">
+      <!-- <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
+        type="video/mp4"> -->
     </video>
   </section>
   <!-- /landing -->
@@ -93,10 +93,10 @@
 
   <!-- Skills -->
   <section id="skills">
-      <video autoplay name="media" loop>
-          <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Late%20evening%20clouds%20hang%20above%20a%20frozen%20lake_5679f137-f204-4918-8589-f716f87b1b7c/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
-           type="video/mp4">
-       </video>
+    <video autoplay name="media" loop>
+      <!-- <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Late%20evening%20clouds%20hang%20above%20a%20frozen%20lake_5679f137-f204-4918-8589-f716f87b1b7c/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
+           type="video/mp4"> -->
+    </video>
     <div class="container">
       <div class="row">
 
@@ -124,7 +124,10 @@
             <a class="random">
               <img class="icon" src="assets/img/icons/node1.svg">
               <span class="tooltip">
-                <p>Test</p>
+                <br>
+                <small>Node.js</small>
+                <br>
+                <small>1 yr | current</small>
               </span>
             </a>
             <a class="random">
@@ -140,17 +143,17 @@
               </span>
             </a>
             <a class="random">
-                <img class="icon" src="assets/img/icons/rust1.svg">
-                <span class="tooltip">
-                  <p>Test</p>
-                </span>
-              </a>
-              <a class="random">
-                  <img class="icon" src="assets/img/icons/asp1.svg">
-                  <span class="tooltip">
-                    <p>Test</p>
-                  </span>
-                </a>
+              <img class="icon" src="assets/img/icons/rust1.svg">
+              <span class="tooltip">
+                <p>Test</p>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/asp1.svg">
+              <span class="tooltip">
+                <p>Test</p>
+              </span>
+            </a>
           </span>
           <!-- /#be -->
           <span id="dc">
