Finished tooltips #skills

--- a/index.html
+++ b/index.html
@@ -124,10 +124,46 @@
           <!-- Backend -->
           <span id="be">
             <a class="random">
-              <img class="icon" src="assets/img/icons/node1.svg">
+              <img class="icon" src="assets/img/icons/angular1.svg">
               <span class="tooltip">
                 <br>
-                <small>Node.js</small>
+                <small>Angular 1.x</small>
+                <br>
+                <small>2 yr | 2016</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/asp1.svg">
+              <span class="tooltip">
+                <br>
+                <small>.NET (Ms VS)</small>
+                <br>
+                <small>2 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/c1.svg">
+              <span class="tooltip">
+                <br>
+                <small>C# (.NET)</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/firebase1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Firebase</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/handlebars1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Handlebars</small>
                 <br>
                 <small>1 yr | current</small>
               </span>
@@ -142,15 +178,6 @@
               </span>
             </a>
             <a class="random">
-              <img class="icon" src="assets/img/icons/c1.svg">
-              <span class="tooltip">
-                <br>
-                <small>C# (.NET)</small>
-                <br>
-                <small>1 yr | current</small>
-              </span>
-            </a>
-            <a class="random">
               <img class="icon" src="assets/img/icons/json1.svg">
               <span class="tooltip">
                 <br>
@@ -160,12 +187,39 @@
               </span>
             </a>
             <a class="random">
-              <img class="icon" src="assets/img/icons/asp1.svg">
+              <img class="icon" src="assets/img/icons/node1.svg">
               <span class="tooltip">
                 <br>
-                <small>.NET (Ms VS)</small>
+                <small>Node.js</small>
                 <br>
-                <small>2 yr | current</small>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/npm1.svg">
+              <span class="tooltip">
+                <br>
+                <small>NPM</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/php1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Php (some)</small>
+                <br>
+                <small>1 yr | 2016</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/sequelize1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Sequelize</small>
+                <br>
+                <small>1 yr | current</small>
               </span>
             </a>
             <a class="random">
@@ -187,15 +241,6 @@
               </span>
             </a>
             <a class="random">
-              <img class="icon" src="assets/img/icons/handlebars1.svg">
-              <span class="tooltip">
-                <br>
-                <small>Handlebars</small>
-                <br>
-                <small>1 yr | current</small>
-              </span>
-            </a>
-            <a class="random">
               <img class="icon" src="assets/img/icons/express1.svg">
               <span class="tooltip">
                 <br>
@@ -204,35 +249,115 @@
                 <small>1 yr | current</small>
               </span>
             </a>
-            <a class="random">
-              <img class="icon" src="assets/img/icons/npm1.svg">
-              <span class="tooltip">
-                <br>
-                <small>NPM</small>
-                <br>
-                <small>1 yr | current</small>
-              </span>
-            </a>
-            <a class="random">
-              <img class="icon" src="assets/img/icons/angular1.svg">
-              <span class="tooltip">
-                <br>
-                <small>Angular1.x</small>
-                <br>
-                <small>2 yr | 2016</small>
-              </span>
-            </a>
           </span>
           <!-- /#be -->
 
           <!-- Data/Cloud -->
           <span id="dc">
-
+            <a class="random">
+              <img class="icon" src="assets/img/icons/apache1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Apache</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/aws1.svg">
+              <span class="tooltip">
+                <br>
+                <small>AWS</small>
+                <br>
+                <small>2 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/graphql1.svg">
+              <span class="tooltip">
+                <br>
+                <small>GraphQL</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/json2.svg">
+              <span class="tooltip">
+                <br>
+                <small>JSON</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/r1.svg">
+              <span class="tooltip">
+                <br>
+                <small>R</small>
+                <br>
+                <small>1 yr | 2015</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/rest1.svg">
+              <span class="tooltip">
+                <br>
+                <small>RESTful API</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/sql1.svg">
+              <span class="tooltip">
+                <br>
+                <small>MySQL</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
           </span>
           <!-- /#dc -->
 
           <!-- Frontend -->
           <span id="fe">
+            <a class="random">
+              <img class="icon" src="assets/img/icons/angular1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Angular 1.x</small>
+                <br>
+                <small>2 yr | 2016</small>
+              </span>
+            </a>
+            <a class="random">
+                <img class="icon" src="assets/img/icons/css1.svg">
+                <span class="tooltip">
+                  <br>
+                  <small>CSS</small>
+                  <br>
+                  <small>5 yr | current (v3)</small>
+                </span>
+              </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/firebase1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Firebase</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+                <img class="icon" src="assets/img/icons/html1.svg">
+                <span class="tooltip">
+                  <br>
+                  <small>HTML</small>
+                  <br>
+                  <small>5 yr | current (v5)</small>
+                </span>
+              </a>
             <a class="random">
               <img class="icon" src='assets/img/icons/js1.svg'>
               <span class="tooltip">
@@ -252,8 +377,32 @@
               </span>
             </a>
             <a class="random">
-              <img class="icon" src="assets/img/icons/git1.svg">
-            </a>
+                <img class="icon" src="assets/img/icons/less1.svg">
+                <span class="tooltip">
+                  <br>
+                  <small>LESS</small>
+                  <br>
+                  <small>4 yr | current</small>
+                </span>
+              </a>
+              <a class="random">
+                  <img class="icon" src="assets/img/icons/ruby1.svg">
+                  <span class="tooltip">
+                    <br>
+                    <small>Ruby</small>
+                    <br>
+                    <small>2 yr | 2016</small>
+                  </span>
+                </a>
+                <a class="random">
+                    <img class="icon" src="assets/img/icons/sass1.svg">
+                    <span class="tooltip">
+                      <br>
+                      <small>SASS</small>
+                      <br>
+                      <small>4 yr | current</small>
+                    </span>
+                  </a>
           </span>
           <!-- /#fe -->
 
@@ -270,13 +419,103 @@
           <!-- Tools -->
           <span id="tl">
             <a class="random">
+              <img class="icon" src="assets/img/icons/ai1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Adobe Illustrator</small>
+                <br>
+                <small>5 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
               <img class="icon" src="assets/img/icons/git1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Git</small>
+                <br>
+                <small>4 yr | current</small>
+              </span>
             </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/github1.svg">
+              <span class="tooltip">
+                <br>
+                <small>GitHub</small>
+                <br>
+                <small>4 yr | current</small>
+              </span>
             </a>
             <a class="random">
+              <img class="icon" src="assets/img/icons/gitlab1.svg">
+              <span class="tooltip">
+                <br>
+                <small>GitLab</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/markdown1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Markdown</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/photoshop1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Adobe Photoshop</small>
+                <br>
+                <small>5 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/powershell1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Powershell</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/shell1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Shell</small>
+                <br>
+                <small>4 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+              <img class="icon" src="assets/img/icons/sketch1.svg">
+              <span class="tooltip">
+                <br>
+                <small>Sketch</small>
+                <br>
+                <small>2 yr | current</small>
+              </span>
+            </a>
+            <a class="random">
+                <img class="icon" src="assets/img/icons/txt1.svg">
+                <span class="tooltip">
+                  <br>
+                  <small>Txt</small>
+                  <br>
+                  <small>5 yr | current</small>
+                </span>
+              </a>
+            <a class="random">
               <img class="icon" src="assets/img/icons/vscode1.svg">
+              <span class="tooltip">
+                <br>
+                <small>VS Code</small>
+                <br>
+                <small>1 yr | current</small>
+              </span>
             </a>
           </span>
           <!-- /#tl -->
