--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <!-- Landing -->
   <section id="landing">
     <video style="margin-top: -100px" autoplay name="media" loop>
-      <!-- <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
-        type="video/mp4"> -->
+      <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Lighthouse%20stands%20in%20Istanbul%E2%80%99s%20harbour_0554659b-5dc1-43d6-8a93-b31ec6b67f63/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
+        type="video/mp4">
     </video>
   </section>
   <!-- /landing -->
@@ -94,8 +94,8 @@
   <!-- Skills -->
   <section id="skills">
     <video autoplay name="media" loop>
-      <!-- <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Late%20evening%20clouds%20hang%20above%20a%20frozen%20lake_5679f137-f204-4918-8589-f716f87b1b7c/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
-           type="video/mp4"> -->
+      <source src="https://s3-eu-west-1.amazonaws.com/video.gallereplay.com/artistarea/Late%20evening%20clouds%20hang%20above%20a%20frozen%20lake_5679f137-f204-4918-8589-f716f87b1b7c/Cinemagraph_plain/1920x1080/cinemagraph.mp4"
+           type="video/mp4">
     </video>
     <div class="container">
       <div class="row">
@@ -104,9 +104,9 @@
           <a class="ops" href="#be">
             <h2>Back-end</h2>
           </a>
-          <a class="ops" href="#crm">
+          <!-- <a class="ops" href="#crm">
             <h2>Crm / Cms</h2>
-          </a>
+          </a> -->
           <a class="ops" href="#dc">
             <h2>Data / Cloud</h2>
           </a>
@@ -150,6 +150,15 @@
                 <small>1 yr | current</small>
               </span>
             </a>
+            <a class="random">
+                <img class="icon" src="assets/img/icons/electron1.svg">
+                <span class="tooltip">
+                  <br>
+                  <small>Electron</small>
+                  <br>
+                  <small>1 yr | current</small>
+                </span>
+              </a>
             <a class="random">
               <img class="icon" src="assets/img/icons/firebase1.svg">
               <span class="tooltip">
@@ -291,6 +300,15 @@
               </span>
             </a>
             <a class="random">
+                <img class="icon" src="assets/img/icons/mysql1.svg">
+                <span class="tooltip">
+                  <br>
+                  <small>MySQL</small>
+                  <br>
+                  <small>1 yr | current</small>
+                </span>
+              </a>
+            <a class="random">
               <img class="icon" src="assets/img/icons/r1.svg">
               <span class="tooltip">
                 <br>
@@ -312,7 +330,7 @@
               <img class="icon" src="assets/img/icons/sql1.svg">
               <span class="tooltip">
                 <br>
-                <small>MySQL</small>
+                <small>SQL</small>
                 <br>
                 <small>1 yr | current</small>
               </span>
@@ -331,6 +349,15 @@
                 <small>2 yr | 2016</small>
               </span>
             </a>
+            <a class="random">
+                <img class="icon" src="assets/img/icons/bootstrap1.svg">
+                <span class="tooltip">
+                  <br>
+                  <small>Bootstrap</small>
+                  <br>
+                  <small>4 yr | current (v4)</small>
+                </span>
+              </a>
             <a class="random">
                 <img class="icon" src="assets/img/icons/css1.svg">
                 <span class="tooltip">
@@ -407,13 +434,13 @@
           <!-- /#fe -->
 
           <!-- CRM -->
-          <span id="crm">
+          <!-- <span id="crm">
 
-            <!-- <a class="random">
+            <a class="random">
               <img class="icon" src="">
-            </a> -->
+            </a>
 
-          </span>
+          </span> -->
           <!-- /#crm -->
 
           <!-- Tools -->
@@ -422,9 +449,9 @@
               <img class="icon" src="assets/img/icons/ai1.svg">
               <span class="tooltip">
                 <br>
-                <small>Adobe Illustrator</small>
+                <small>Illustrator</small>
                 <br>
-                <small>5 yr | current</small>
+                <small>5 yr | current (cc)</small>
               </span>
             </a>
             <a class="random">
@@ -455,6 +482,15 @@
               </span>
             </a>
             <a class="random">
+                <img class="icon" src="assets/img/icons/drive1.svg">
+                <span class="tooltip">
+                  <br>
+                  <small>Google Drive</small>
+                  <br>
+                  <small>5 yr | current</small>
+                </span>
+              </a>
+            <a class="random">
               <img class="icon" src="assets/img/icons/markdown1.svg">
               <span class="tooltip">
                 <br>
@@ -467,9 +503,9 @@
               <img class="icon" src="assets/img/icons/photoshop1.svg">
               <span class="tooltip">
                 <br>
-                <small>Adobe Photoshop</small>
+                <small>Photoshop</small>
                 <br>
-                <small>5 yr | current</small>
+                <small>5 yr | current (cc)</small>
               </span>
             </a>
             <a class="random">
@@ -499,6 +535,15 @@
                 <small>2 yr | current</small>
               </span>
             </a>
+            <a class="random">
+                <img class="icon" src="assets/img/icons/slack1.svg">
+                <span class="tooltip">
+                  <br>
+                  <small>Slack</small>
+                  <br>
+                  <small>1 yr | current</small>
+                </span>
+              </a>
             <a class="random">
                 <img class="icon" src="assets/img/icons/txt1.svg">
                 <span class="tooltip">
@@ -531,13 +576,12 @@
 
 
   <!-- Portfolio -->
-  <section id="portfolio" style="background-color:#ccc">
+  <section id="portfolio">
     <div class="container">
       <div class="row">
 
         <div class="col-6">
           <h1>Portfolio</h1>
-          <p>Section 3</p>
         </div>
         <!-- /.col-6 -->
 
@@ -556,7 +600,6 @@
 
         <div class="col-6">
           <h1>Contact</h1>
-          <p>Section 4</p>
         </div>
         <!-- /.col-6 -->
 
